FIX: Multiple white spaces in field labels were shown as one

--- a/src/gui02/components/Form/FormField.module.scss
+++ b/src/gui02/components/Form/FormField.module.scss
@@ -9,7 +9,7 @@
   display: block;
   overflow: hidden;
   padding: 0 0.5em 0 0;
-  white-space: nowrap;
+  white-space: pre-wrap;
   word-wrap: normal;
 }
 
